# cli-to-do

./: LICENSE  README.md  stack.yaml  to-do.cabal
.stack-work/: stack.sqlite3
app/: Main.hs
